--- a/css/main.css
+++ b/css/main.css
@@ -96,25 +96,31 @@ div {
 }
 
 @keyframes bounce {
-  0% {
 
+  0% {
+    top: calc(50% - 50px);
   }
+
   25% {
     top: 0;
     right: 50px;
   }
+
   50% {
     top: 40px;
     right: 100px;
   }
+
   75% {
     top: 15px;
     right: 125px;
   }
+
   100% {
     top: 25px;
     right: 150px;
   }
+
 }
 
 .list {
@@ -134,21 +140,24 @@ div {
 .list li {
   overflow: hidden;
   padding: 0 0.5em;
-  max-height: 10;
+  max-height: 0;
 
   background-color: plum;
   border: 1px solid mediumpurple;
   overflow: hidden;
 
   color: mediumpurple;
-  animation: drop .5s repeat;
+  animation: drop .5s linear forwards;
 }
 
 @keyframes drop {
+
   0% {
     max-height: 0;
   }
+
   100% {
-    max-height: 100%;
+    max-height: 1.5em;
   }
+
 }
